--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@angular/ssr": "^17.3.17",
     "@stripe/stripe-js": "^8.1.0",
     "axios": "^1.13.1",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.5.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
     "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
